<resources>
 <string name="app_name">Nurses</string>
    <!-- Strings used for fragments for navigation -->
    <string name="Novo_Enfermeiros_fragment_label">New Nurse</string>
    <string name="edita_enfermeiro_fragment_label">Edit Nuse</string>
    <string name="alterar_enfermeiro_fragment_label" translatable="false">Alterar Nuse</string>
    <string name="alterar_enfermeiro" translatable="false" />
    <string name="eliminar_enfermeiros" translatable="false" />
    <string name="novo_enfermeiro" translatable="false" />
    <string name="action_eliminar_enfermeiro">Delet Nurse</string>
    <string name="nome">Name</string>
    <string name="contacto">Contact</string>
    <string name="data">Data</string>
    <string name="sexo">sex</string>
    <string name="guardar">save</string>
    <string name="versao" translatable="false">Enfermeiro v. 1.0</string>

    <string name="preencha_Morada">fill in the address</string>

    <string name="erro_inserir_enfermeiro">Error insering nurse</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="erro_alterar_enfermeiro">Erro edit nurse</string>
    <string name="nomes">Name</string>
    <string name="Sexo">Sex</string>
    <string name="novoenfermeiro">New Nurse</string>
    <string name="action_settings">Settings</string>
    <string name="Lista_Enfermeiros_fragment_label">Nurse</string>
    <string name="elimina_enferneiro_fragment_label">Delet Nurse</string>
    <string name="action_novo_enfermeiro">"New Nurse "</string>
    <string name="action_alterar_enfermeiro">"edit Nurse "</string>
    <string name="editTextInputNome">Name</string>
    <string name="morad">address</string>
    <string name="email">mail</string>
    <string name="destritos">Destrits</string>
    <string name="cancelar">cancel</string>
    <string name="eliminar_enfermeiro">Delete Nurse</string>
    <string name="preencha_Nome">fill in the name</string>
    <string name="preencha_sexo">fill in the sex</string>
    <string name="preencha_Data">fill in the date</string>
    <string name="preencha_Contacto">fill in the Contact</string>
    <string name="preencha_Mail">fill in the Email</string>
    <string name="erro_eliminar_enfermeiro">Error delet nurse</string>
    <string name="enfermeiro_guardado_sucesso">Nurse save sucefull</string>
    <string name="contactos">Contact</string>
    <string name="morada">address</string>
    <string name="Email">mail</string>
    <string name="tabelaenfermerio" translatable="false">tabelaEnfermerio</string>
    <string name="tabeladestritos" translatable="false">TabelaDestritos</string>
    <string name="tabelapaciente" translatable="false">TabelaPaciente</string>
    <string name="adriano" translatable="false">Adriano</string>
    <string name="numero_utente" translatable="false">Numero_Utente</string>
    <string name="lista_pessoas" translatable="false">Lista de pessoas</string>
    <string name="enfermeiros" translatable="false">Enfermeiros</string>
    <string name="nome_da_vacina" translatable="false">nome da Vacina</string>
    <string name="nome_de_fabricante" translatable="false">Nome de Fabricante</string>
    <string name="data_de_validacao" translatable="false">data de validacao</string>
    <string name="pessoas" translatable="false">Pessoas</string>
    <string name="fabricante" translatable="false">fabricante</string>
    <string name="fabrica_ao" translatable="false">Fabricacao</string>

    <string name="erro_inserir_destritos" >Erro ao inserir destritos</string>
    <string name="erro_eliminar_destritos" >erro eliminar destritos</string>
    <string name="erro_alterar_destritos">Erro ao alterar destritos</string>


    <string name="erro_inserir_pessoa" >Erro ao inserir pessoa</string>
    <string name="erro_eliminar_pessoa" >erro eliminar pessoa</string>
    <string name="erro_alterar_pessoa">Erro ao alterar pessoa</string>


    <string name="erro_inserir_vacina" >Erro ao inserir vacina</string>
    <string name="erro_eliminar_vacina" >erro eliminar vacina</string>
    <string name="erro_alterar_vacina" >Erro ao alterar vacina</string>



    <string name="Destrito_guardado_sucesso" >Destrito guardado com sucesso</string>
    <string name="Pessoa_guardado_sucesso" >Pessoa guardado com sucesso</string>
    <string name="Destrito_Elimindo_sucesso" >Destrito Elimindo com sucesso</string>
    <string name="Pessoa_Elimindo_sucesso" >Pessoa Elimindo com sucesso</string>
    <string name="Vacina_Elimindo_sucesso" >Vacina Elimindo com sucesso</string>
    <string name="Vacina_guardado_sucesso" >Vacina guardado com sucesso</string>
    <string name="enfermeiro_Elimindo_sucesso" translatable="false">enfermeiro Elimindo com sucesso</string>


</resources>