<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EliminarEnfermeirosFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_ecran"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/nome"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_selecao" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        tools:text="Nome"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_ecran"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/contacto"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_selecao" />

    <TextView
        android:id="@+id/textViewContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        tools:text="Contacto"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_ecran"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/morada"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_selecao" />

    <TextView
        android:id="@+id/textViewNumeroUtente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        tools:text="Morada"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_ecran"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_selecao" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        tools:text="Email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/Sexo"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_selecao" />

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        tools:text="sexo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/data"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_selecao" />

    <TextView
        android:id="@+id/textViewData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        tools:text="@string/data"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/destritos"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_selecao" />




    <TextView
        android:id="@+id/textViewDestrito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        tools:text="Destritos"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</LinearLayout>